dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.13)
AC_INIT(libapreq - Apache Request Library, 2.0, apreq-dev@httpd.apache.org, libapreq)
AC_CONFIG_AUX_DIR(build)
AM_INIT_AUTOMAKE

AC_PROG_MAKE_SET

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_LN_S

AM_MAINTAINER_MODE

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_APREQ
AC_OUTPUT([Makefile src/Makefile env/Makefile t/Makefile])
