dnl Process this file with autoconf to produce a configure script.
AC_INIT(libapreq.pod)
AM_INIT_AUTOMAKE(libapreq, 0.32.0)
AM_CONFIG_HEADER(c/libapreq_config.h)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_LIBAPREQ
AC_OUTPUT(Makefile c/Makefile)
