dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.13)
AC_INIT()
AM_INIT_AUTOMAKE(libapreq, 2.0)
AC_CONFIG_AUX_DIR(./build)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_LN_S

AC_ARG_ENABLE(maintainer-mode,[  --enable-maintainer-mode  Turn on debugging 
and compile time warnings],
  [APR_ADDTO(CFLAGS,-g)
   if test "$GCC" = "yes"; then
     APR_ADDTO(CFLAGS,[-Wall -Wmissing-prototypes -Wstrict-prototypes 
                       -Wmissing-declarations])
   elif test "$AIX_XLC" = "yes"; then
     APR_ADDTO(CFLAGS,-qfullpath -qinitauto=FE -qwarn64 -qcheck=all)
   fi
])dnl


dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

AC_APREQ
AC_OUTPUT(Makefile src/Makefile)
